Added controller Added view for controller Added index page

--- a/rails/company_management/app/views/employees/index.html.erb
+++ b/rails/company_management/app/views/employees/index.html.erb
@@ -2,6 +2,9 @@
 <%= render "shared/menu" %>
 <h2>Employee first details</h2>
 
+<%= link_to "Add", new_book_path %>
+
+
 <%#= render partial: "" locals: { employee: @employee } %>
 
 <% @employees.each  do |employee| %>
