--- a/rails/company_management/app/views/employees/show.html.erb
+++ b/rails/company_management/app/views/employees/show.html.erb
@@ -1,3 +1,5 @@
-<h1>This is my show file</h1>
+This is show page
 
-Name: <%= @employee %>
+<%= @employee.name %>
+<%= @employee.age %>
+<%= @employee.salary %>
