--- a/rails/company_management/app/assets/stylesheets/style.css
+++ b/rails/company_management/app/assets/stylesheets/style.css
@@ -9,4 +9,40 @@
 	margin-top: 50px;
 }
 
-.create-database
+.anchor {
+  text-align: center;
+  background-color: green; 
+  font-size: 24px;
+  color: white; 
+  padding:10px 20px; 
+  cursor:pointer; 
+  margin: 0 auto; 
+  display: inline-block; 
+  margin-top: 50px;
+  text-decoration: none;
+
+}
+
+.border{
+  border-style: solid; 
+  border-width: 5px;
+  border-color: red;
+  border-radius: 5px
+
+}
+
+.text-center{
+  text-align: center;
+}
+
+.align-right{
+  text-align: right;
+}
+
+.input-text{
+   margin: 0 auto; 
+  display: inline-block; 
+  margin-top: 50px;
+  
+}
+
