--- a/rails/company_management/app/views/home/index.html.erb
+++ b/rails/company_management/app/views/home/index.html.erb
@@ -16,11 +16,15 @@
 				<a href="/department/new" class="anchor"> Create Department</a>
 			</div>
 
+			<div class="text-center">
+				<a href="/employee/all" class="anchor"> View Employees</a>
+			</div>
+
 			
 
 
 			<!-- <input class="create-employee" type="submit" value="Create Department" name="create_dept"> <br> -->
-			<input class="create-employee" type="submit" value="View Employee" name="view_emp"> <br>
+			<!-- <input class="create-employee" type="submit" value="View Employee" name="view_emp"> <br> -->
 			<input class="create-employee" type="submit" value="View Department" name="view_dept"> 
 
 		</div>
