Added all depatments page

--- a/rails/company_management/app/views/home/index.html.erb
+++ b/rails/company_management/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
-
+<!Doctype html>
 <html>
 	<head >
 		<title>Company Management	</title>
-		<link href="style.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -20,12 +20,10 @@
 				<a href="/employee/all" class="anchor"> View Employees</a>
 			</div>
 
-			
+			<div class="text-center">
+				<a href="/department/all" class="anchor"> View Departments</a>
+			</div>
 
-
-			<!-- <input class="create-employee" type="submit" value="Create Department" name="create_dept"> <br> -->
-			<!-- <input class="create-employee" type="submit" value="View Employee" name="view_emp"> <br> -->
-			<input class="create-employee" type="submit" value="View Department" name="view_dept"> 
 
 		</div>
 	</body>
