--- a/rails/company_management/app/views/department/new.html.erb
+++ b/rails/company_management/app/views/department/new.html.erb
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Create Department</title>
-		<link href="style.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
 		<div >
