--- a/rails/company_management/app/views/employees/new.html.erb
+++ b/rails/company_management/app/views/employees/new.html.erb
@@ -1,13 +1,39 @@
-<html>
-	<head>
-		<title>Create Employee</title>
-		<link href="styles.css" rel="stylesheet">
-	</head>
-	<body>
+
 		<div >
 			<a href="/home/index">Home</a>
 		</div>
-		<form action="/employee/create">
+
+		<%= form_with url: "/employee/create", method: :get do |form| %>
+		  <%= form.label :ename, "Employee Name" %><br>
+		  <%= form.text_field :ename %><br><br>
+		  <%= form.label :age, "Age" %><br>
+		  <%= form.text_field :age %><br><br>
+		  <%= form.label "Gender" %><br>
+		  <%= form.radio_button :gender, "male" %>
+		  <%= form.label :gender_male, "Male" %>
+		  <%= form. radio_button :gender, "female" %>
+		  <%= form.label :gender_female, "Female" %><br><br>
+		  <%= form.label :salary, "Salary" %><br>
+		  <%= form.text_field :salary %><br><br>
+		  <%= form.label :department_id, "Department id" %><br>
+		  <%= form.text_field :department_id %><br><br>
+		  <%= form.button "Submit" %> <br><br><br>
+
+		  <%= form.label :other, "Other Fields" %>
+
+		  <%=	form.hidden_field :parent_id, value: "Foo" %>
+		  <%= form.password_field :password %>
+
+
+
+
+		<% end %>
+
+
+
+
+
+	<!-- 	<form action="/employee/create">
 
 			<div>
 				<label for="ename"> Employee Name :</label><br>	
@@ -22,7 +48,5 @@
 				
 			</div>
 
-		</form>
+		</form> -->
 		
-	</body>
-</html>
