Added CRUD opration for articles

--- a/rails/company_management/app/views/articles/_article.html.erb
+++ b/rails/company_management/app/views/articles/_article.html.erb
@@ -1,10 +1,12 @@
 
 
 <div>
-  Name
-  <%= article.name %>
-  Quantity
-  <%= article.quantity %>
-  Description
-  <%= article.description %>
+  <strong>Name :</strong>
+  <%= article.name %><br>
+  <strong>Quantity :</strong>
+  <%= article.quantity %><br>
+  <strong>Description :</strong>
+  <%= article.description %><br>
+
+ 
 </div>
