--- a/rails/company_management/app/views/articles/index.html.erb
+++ b/rails/company_management/app/views/articles/index.html.erb
@@ -9,8 +9,7 @@
 	      <%= render article %>
 	  
 	        <%= link_to "Edit", edit_article_path(article) %>
-	        <!-- <%= link_to "Delete", article, method: :delete %> -->
-	        <%= button_to "Destroy this product",article, method: :delete %>
+	        <%= button_to "Delete",article, method: :delete %>
 	  <% end %>
 	<% end %>
 	<br>
