--- a/rails/company_management/app/views/articles/_article.html.erb
+++ b/rails/company_management/app/views/articles/_article.html.erb
@@ -1,12 +1,12 @@
 
 
-<div>
+<div id='<%= article.id %>'>
   <strong>Name :</strong>
   <%= article.name %><br>
   <strong>Quantity :</strong>
   <%= article.quantity %><br>
   <strong>Description :</strong>
   <%= article.description %><br>
+  <div class='destroy'> Delete </div>
 
- 
 </div>
