--- a/rails/company_management/app/views/articles/_form.html.erb
+++ b/rails/company_management/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: article) do |form| %>
+<%= form_with(model: article, local:false) do |form| %>
 
   <% if article.errors.any? %>
       <h1><%= article.errors.count %> Error(s)</h1>
