--- a/rails/company_management/app/views/tweets/index.html.erb
+++ b/rails/company_management/app/views/tweets/index.html.erb
@@ -1,3 +1,9 @@
+
+<%= form_with url: search_tweets_path, method: :post do |form| %>
+  <% form.search_field :tweet_search , oninput: "this.form.requestSubmit()"%>
+<% end %>
+
+<div id= "search_results">Search Results</div>
 <p style="color: green" id="notice"><%= notice %></p>
 
 <h1>Tweets
