--- a/rails/employee_management/app/views/users/new.html.erb
+++ b/rails/employee_management/app/views/users/new.html.erb
@@ -28,12 +28,12 @@
 
   <div>
     <%= form.label :password, style: "display: block" %>
-    <%= form.text_field :password %>
+    <%= form.password_field :password %>
   </div>
 
    <div>
-    <%= form.label :confirm_password, style: "display: block" %>
-    <%= form.text_field :confirm_password %>
+    <%= form.label :password_confirmation, style: "display: block" %>
+    <%= form.password_field :password_confirmation %>
   </div>
 
    <div>
