Added code verification page with email verification

--- a/rails/employee_management/app/views/user_mailer/welcome_email.html.erb
+++ b/rails/employee_management/app/views/user_mailer/welcome_email.html.erb
@@ -1,9 +1,9 @@
-<h1>Welcome to example.com, <%= @user.name %></h1>
+<h1>Welcome to Tweets.com, <%= @user.name %></h1>
     <p>
       You have successfully signed up to Tweets.com,
       your code is: <%= @user.code %>.<br>
     </p>
     <p>
-      Please confirm the code, by clicking this link : <%= @url %>.
+      Please confirm the code, by clicking this link : <%= @url %>
     </p>
     <p>Thanks for joining and have a great day!</p>
