--- a/rails/oauthprovider/app/views/home/index.html.erb
+++ b/rails/oauthprovider/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <%= button_to "Logout", destroy_user_session_path, :method => :delete if user_signed_in? %>
+
+<%= link_to "Add Application" ,"http://localhost:3000/oauth/applications" if user_signed_in? %>
